# Tipster

./: .gitignore  PLAN.md  README.md  pyproject.toml
tests/: test_phase0.py
tipster/: __init__.py  budget.py  cli.py  config.py  crawler.py  directives_consumer.py  events.py  extractor.py  feedback.py  link_scorer.py  llm.py  onboarding.py  reporter.py  scheduler.py  triage.py  tui.py
tipster/db/: models.py  session.py
tipster/db/repositories/: content_items.py  directives.py  feedback_repo.py  prompt_examples.py  reports.py  topics.py  url_registry.py
